lab1/Test/L1-A-10-65.output
Error Type A at Line 14
Error Type A at Line 16
Error Type B at Line 17
Error Type A at Line 21
Error Type B at Line 28
Error Type A at Line 31
Error Type A at Line 44
Error Type B at Line 48
Error Type B at Line 53
