lab1/Test/L1-A-10-65.cmm
struct {
}FZAnq [ 1914355231 ] , TqFsTG133l 

;
struct OT23MeYqS7Ri6bX ;
float osTImC3sxaBy3go2L ( ) {
  int Hb0L ;
  vGJ2HTjRn || eRkP9BDKwi > Zmku2I + - ! sw2fVmkD3kWPwlC 
    ( eYmAXZQJvvmeqKZu88um , _gQEY1vXYFc7zBw = u0A9tHi7ZL 
    && _V6Tl1PErv3MyfE <= M7z_yjUFftfW7cbgSm - vQQNb / 
    O19H6uP [ BDdrVAdg5u = PuCEGj || jMnH0KTxNaMW == bQ_8K4Hm6KX4FI7Jyj 
    * ( G0_AM3 || EF4 + f3 / w ( q5vnp4NRJzjiT1N && NYgtHQuC4VPKMk9 
    != sJ1hhAFqJRPy ) + - 143593762.1572159618 ) < ! 1052202647 
    . lT1cil8MGGMeqbX >= Vtg4tWyVnb * a1f ( ) ] ) :. iNwgcs6S 
    ;
`}
int <= He_QdvjrcoASRTOa54f0 
;
struct Sf52TQW5BCiDO8Morrn ;
int rgulrYgfSwY ( ) {
`}
int ;
int ;
int ;
int ;
int eQdYq ( ) {
}
;int pN3iLmN53Dn ( int ipE_AtLgZ_m7WsQFI , int Ou_qPof 
  ) {
  struct qhMym7kzuShHZ {
  }\_qWjJ , IyQb6KjSPs3RcYauk = j ;
}
int ;
int oQErQVlJc5XLA 
;
int ;
int ;
int ;
int W0fdi_ME0JjDjl ( ) {
}
int bRI3UY3Cq8Yzbhr8j ( ) {
  Y ;
  if ( Kj1m3G ) {
    if ( aqrX9Okeg4zDGbI ) #    HGu_D1cbfseBV9Zm6k 
      ;
else     I ;

  }&& else   if ( sg5W0HRgWN )   while ( I9OsRW ) 
      return uLASrm5vVg0_nRk1M6 ;



, }
int zwBiXaBZPfgodXI ( ) {
}
